Подменю на категории (не доделано).

--- a/app/category.html
+++ b/app/category.html
@@ -578,76 +578,81 @@
                             </p>
 
 
-                            <ul class="menu">
-                                <li>
-                                    <a href="#">
-                                        <span class="title">
-                                            ВАЗ 2101, ВАЗ 2102, ВАЗ 2105, ВАЗ 2106, ВАЗ 2107, Жигули, Классика
-                                        </span>
-                                        <small class="count">29</small>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <span class="title">
-                                            ВАЗ 2108, ВАЗ 2109, ВАЗ 2110, ВАЗ 1117 Калина, ВАЗ 2170 Приора
-                                        </span>
-                                        <small class="count">18</small>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <span class="title">
-                                            Daewoo Lanos, Nexia, Matiz, Sens
-                                        </span>
-                                        <small class="count">55</small>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <span class="title">
-                                            Mitsubishi (Мицубиси)
-                                        </span>
-                                        <small class="count">2</small>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <span class="title">
-                                            Таврия, Славута, ЗАЗ-1102
-                                        </span>
-                                        <small class="count">10</small>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <span class="title">
-                                            Chery (Чери)
-                                        </span>
-                                        <small class="count">7</small>
-                                    </a>
-                                </li>
-                            </ul>
+                            <div class="row">
+                                <div class="menu submenu">
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                ВАЗ 2101, ВАЗ 2102, ВАЗ 2105, ВАЗ 2106, ВАЗ 2107, Жигули, Классика
+                                            </span>
+                                            <small class="count">29</small>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                ВАЗ 2108, ВАЗ 2109, ВАЗ 2110, ВАЗ 1117 Калина, ВАЗ 2170 Приора
+                                            </span>
+                                            <small class="count">18</small>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                Daewoo Lanos, Nexia, Matiz, Sens
+                                            </span>
+                                            <small class="count">55</small>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                Mitsubishi (Мицубиси)
+                                            </span>
+                                            <small class="count">2</small>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                Таврия, Славута, ЗАЗ-1102
+                                            </span>
+                                            <small class="count">10</small>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a href="#" class="item">
+                                            <span class="title">
+                                                Chery (Чери)
+                                            </span>
+                                            <small class="count">7</small>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
-                        <div class="m-b-20 m-t-20" style="display: inline-block">
-                            <b style="color: red">Тут должны быть фильтры и сортировки</b>
-                        </div>
-
-                        <div class="blog">
+                        <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
                                     Всего статей: <span class="count">121</span>
                                 </div>
                                 <div class="sortby">
-                                    Сортировать по:
-                                    <select name="sortby">
-                                        <option value="published_at" selected="">дате</option>
-                                        <option value="popular">рейтингу (оценке)</option>
-                                        <option value="price">просмотрам</option>
-                                        <option value="rating">комментариям</option>
-                                        <option value="popular">количеству сохранивших</option>
-                                    </select>
+                                    <span>Сортировать по:</span>
+                                    <div class="sortby dropdown">
+                                        <a href="#" class="button">дате</a>
+                                        <div class="dropdown-container">
+                                            <div class="container-body">
+                                                <select name="sortby">
+                                                    <option value="published_at" selected="">дате</option>
+                                                    <option value="popular">рейтингу (оценке)</option>
+                                                    <option value="price">просмотрам</option>
+                                                    <option value="rating">комментариям</option>
+                                                    <option value="popular">количеству сохранивших</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="list">
