Профиль пользователя (ссылки на профиль, разметка левой колонки и статистики в профиле).

--- a/app/category.html
+++ b/app/category.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Главная страница - Avtorem.info</title>
+	<title>Категория статей - Avtorem.info</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -362,13 +362,13 @@
                                         </div>
                                     </div>
                                     <div class="user pull-left dropdown">
-                                        <a href="#" class="button">
+                                        <a href="profile.html" class="button">
                                             <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
                                             <i class="fa fa-bars"></i>
                                         </a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
-                                                <a href="#" class="title">
+                                                <a href="profile.html" class="title">
                                                     <i class="fa fa-user"></i>
                                                     Мой профиль
                                                 </a>
@@ -678,7 +678,7 @@
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-                                                <a href="#" itemprop="url">
+                                                <a href="profile.html" itemprop="url">
                                                     <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
                                                     <span class="login" itemprop="name">IvanIvanIvanIvan</span>
                                                 </a>
@@ -762,7 +762,7 @@
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-                                                <a href="#" itemprop="url">
+                                                <a href="profile.html" itemprop="url">
                                                     <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
                                                 </a>
                                             </div>
@@ -842,7 +842,7 @@
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-                                                <a href="#" itemprop="url">
+                                                <a href="profile.html" itemprop="url">
                                                     <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
                                                 </a>
                                             </div>
@@ -979,12 +979,12 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Парк</span></a>
+                                        <a href="profile.html"><span class="author">Парк</span></a>
                                         <span class="date">3 мин. назад</span>
                                     </div>
                                     <a href="question.html" class="text">Свист коробки передач ваз 21099</a>
@@ -995,12 +995,12 @@
                                 </a>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Alexander</span></a>
+                                        <a href="profile.html"><span class="author">Alexander</span></a>
                                         <span class="date">2 часа назад</span>
                                     </div>
                                     <a href="question.html" class="text">Можно ли ездить со сломанной передней пружиной?</a>
@@ -1011,12 +1011,12 @@
                                 </a>
                             </div>
                             <div class="item has-solution">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Muph1984</span></a>
+                                        <a href="profile.html"><span class="author">Muph1984</span></a>
                                         <span class="date">30 августа</span>
                                     </div>
                                     <a href="question.html" class="text">
@@ -1120,11 +1120,11 @@
                         <div class="items">
                             <div class="item">
                                 <div class="position">1</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Ivan</span></a>
+                                    <a href="profile.html" class="login"><span>Ivan</span></a>
                                     <span class="rank">Эксперт</span>
                                 </div>
                                 <div class="rating">
@@ -1133,11 +1133,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">2</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>SKS</span></a>
+                                    <a href="profile.html" class="login"><span>SKS</span></a>
                                     <span class="rank">Эксперт</span>
                                 </div>
                                 <div class="rating">
@@ -1146,11 +1146,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">3</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Мастер</span></a>
+                                    <a href="profile.html" class="login"><span>Мастер</span></a>
                                     <span class="rank">Профи</span>
                                 </div>
                                 <div class="rating">
@@ -1160,11 +1160,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">4</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Muph1984</span></a>
+                                    <a href="profile.html" class="login"><span>Muph1984</span></a>
                                     <span class="rank">Энтузиаст</span>
                                 </div>
                                 <div class="rating">
@@ -1174,11 +1174,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">5</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Макс</span></a>
+                                    <a href="profile.html" class="login"><span>Макс</span></a>
                                     <span class="rank">Любитель</span>
                                 </div>
                                 <div class="rating">
@@ -1202,7 +1202,7 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
@@ -1223,7 +1223,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
@@ -1243,7 +1243,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
