--- a/app/contacts.html
+++ b/app/contacts.html
@@ -672,12 +672,12 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Парк</span></a>
+                                        <a href="profile.html"><span class="author">Парк</span></a>
                                         <span class="date">3 мин. назад</span>
                                     </div>
                                     <a href="question.html" class="text">Свист коробки передач ваз 21099</a>
@@ -688,12 +688,12 @@
                                 </a>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Alexander</span></a>
+                                        <a href="profile.html"><span class="author">Alexander</span></a>
                                         <span class="date">2 часа назад</span>
                                     </div>
                                     <a href="question.html" class="text">Можно ли ездить со сломанной передней пружиной?</a>
@@ -704,12 +704,12 @@
                                 </a>
                             </div>
                             <div class="item has-solution">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Muph1984</span></a>
+                                        <a href="profile.html"><span class="author">Muph1984</span></a>
                                         <span class="date">30 августа</span>
                                     </div>
                                     <a href="question.html" class="text">
@@ -813,11 +813,11 @@
                         <div class="items">
                             <div class="item">
                                 <div class="position">1</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Ivan</span></a>
+                                    <a href="profile.html" class="login"><span>Ivan</span></a>
                                     <span class="rank">Эксперт</span>
                                 </div>
                                 <div class="rating">
@@ -826,11 +826,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">2</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>SKS</span></a>
+                                    <a href="profile.html" class="login"><span>SKS</span></a>
                                     <span class="rank">Эксперт</span>
                                 </div>
                                 <div class="rating">
@@ -839,11 +839,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">3</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Мастер</span></a>
+                                    <a href="profile.html" class="login"><span>Мастер</span></a>
                                     <span class="rank">Профи</span>
                                 </div>
                                 <div class="rating">
@@ -853,11 +853,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">4</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Muph1984</span></a>
+                                    <a href="profile.html" class="login"><span>Muph1984</span></a>
                                     <span class="rank">Энтузиаст</span>
                                 </div>
                                 <div class="rating">
@@ -867,11 +867,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">5</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Макс</span></a>
+                                    <a href="profile.html" class="login"><span>Макс</span></a>
                                     <span class="rank">Любитель</span>
                                 </div>
                                 <div class="rating">
@@ -895,7 +895,7 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
@@ -916,7 +916,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
@@ -936,7 +936,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
