--- a/app/index.html
+++ b/app/index.html
@@ -362,13 +362,13 @@
                                         </div>
                                     </div>
                                     <div class="user pull-left dropdown">
-                                        <a href="#" class="button">
+                                        <a href="profile.html" class="button">
                                             <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
                                             <i class="fa fa-bars"></i>
                                         </a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
-                                                <a href="#" class="title">
+                                                <a href="profile.html" class="title">
                                                     <i class="fa fa-user"></i>
                                                     Мой профиль
                                                 </a>
@@ -611,7 +611,7 @@
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-                                                <a href="#" itemprop="url">
+                                                <a href="profile.html" itemprop="url">
                                                     <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
                                                     <span class="login" itemprop="name">IvanIvanIvanIvan</span>
                                                 </a>
@@ -695,7 +695,7 @@
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-                                                <a href="#" itemprop="url">
+                                                <a href="profile.html" itemprop="url">
                                                     <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
                                                 </a>
                                             </div>
@@ -775,7 +775,7 @@
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-                                                <a href="#" itemprop="url">
+                                                <a href="profile.html" itemprop="url">
                                                     <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
                                                 </a>
                                             </div>
@@ -990,12 +990,12 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Парк</span></a>
+                                        <a href="profile.html"><span class="author">Парк</span></a>
                                         <span class="date">3 мин. назад</span>
                                     </div>
                                     <a href="question.html" class="text">Свист коробки передач ваз 21099</a>
@@ -1006,12 +1006,12 @@
                                 </a>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Alexander</span></a>
+                                        <a href="profile.html"><span class="author">Alexander</span></a>
                                         <span class="date">2 часа назад</span>
                                     </div>
                                     <a href="question.html" class="text">Можно ли ездить со сломанной передней пружиной?</a>
@@ -1022,12 +1022,12 @@
                                 </a>
                             </div>
                             <div class="item has-solution">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Muph1984</span></a>
+                                        <a href="profile.html"><span class="author">Muph1984</span></a>
                                         <span class="date">30 августа</span>
                                     </div>
                                     <a href="question.html" class="text">
@@ -1131,11 +1131,11 @@
                         <div class="items">
                             <div class="item">
                                 <div class="position">1</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Ivan</span></a>
+                                    <a href="profile.html" class="login"><span>Ivan</span></a>
                                     <span class="rank">Эксперт</span>
                                 </div>
                                 <div class="rating">
@@ -1144,11 +1144,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">2</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>SKS</span></a>
+                                    <a href="profile.html" class="login"><span>SKS</span></a>
                                     <span class="rank">Эксперт</span>
                                 </div>
                                 <div class="rating">
@@ -1157,11 +1157,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">3</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Мастер</span></a>
+                                    <a href="profile.html" class="login"><span>Мастер</span></a>
                                     <span class="rank">Профи</span>
                                 </div>
                                 <div class="rating">
@@ -1171,11 +1171,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">4</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Muph1984</span></a>
+                                    <a href="profile.html" class="login"><span>Muph1984</span></a>
                                     <span class="rank">Энтузиаст</span>
                                 </div>
                                 <div class="rating">
@@ -1185,11 +1185,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">5</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Макс</span></a>
+                                    <a href="profile.html" class="login"><span>Макс</span></a>
                                     <span class="rank">Любитель</span>
                                 </div>
                                 <div class="rating">
@@ -1213,7 +1213,7 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
@@ -1234,7 +1234,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
@@ -1254,7 +1254,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
