--- a/app/questions.html
+++ b/app/questions.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Главная страница - Avtorem.info</title>
+	<title>Вопросы - Avtorem.info</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -908,12 +908,12 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Парк</span></a>
+                                        <a href="profile.html"><span class="author">Парк</span></a>
                                         <span class="date">3 мин. назад</span>
                                     </div>
                                     <a href="question.html" class="text">Свист коробки передач ваз 21099</a>
@@ -924,12 +924,12 @@
                                 </a>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Alexander</span></a>
+                                        <a href="profile.html"><span class="author">Alexander</span></a>
                                         <span class="date">2 часа назад</span>
                                     </div>
                                     <a href="question.html" class="text">Можно ли ездить со сломанной передней пружиной?</a>
@@ -940,12 +940,12 @@
                                 </a>
                             </div>
                             <div class="item has-solution">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#"><span class="author">Muph1984</span></a>
+                                        <a href="profile.html"><span class="author">Muph1984</span></a>
                                         <span class="date">30 августа</span>
                                     </div>
                                     <a href="question.html" class="text">
@@ -1049,11 +1049,11 @@
                         <div class="items">
                             <div class="item">
                                 <div class="position">1</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Ivan</span></a>
+                                    <a href="profile.html" class="login"><span>Ivan</span></a>
                                     <span class="rank">Эксперт</span>
                                 </div>
                                 <div class="rating">
@@ -1062,11 +1062,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">2</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>SKS</span></a>
+                                    <a href="profile.html" class="login"><span>SKS</span></a>
                                     <span class="rank">Эксперт</span>
                                 </div>
                                 <div class="rating">
@@ -1075,11 +1075,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">3</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Мастер</span></a>
+                                    <a href="profile.html" class="login"><span>Мастер</span></a>
                                     <span class="rank">Профи</span>
                                 </div>
                                 <div class="rating">
@@ -1089,11 +1089,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">4</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Muph1984</span></a>
+                                    <a href="profile.html" class="login"><span>Muph1984</span></a>
                                     <span class="rank">Энтузиаст</span>
                                 </div>
                                 <div class="rating">
@@ -1103,11 +1103,11 @@
                             </div>
                             <div class="item">
                                 <div class="position">5</div>
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
-                                    <a href="#" class="login"><span>Макс</span></a>
+                                    <a href="profile.html" class="login"><span>Макс</span></a>
                                     <span class="rank">Любитель</span>
                                 </div>
                                 <div class="rating">
@@ -1131,7 +1131,7 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
@@ -1152,7 +1152,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
@@ -1172,7 +1172,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <a href="#" class="user-avatar">
+                                <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
