--- a/app/profile-saved.html
+++ b/app/profile-saved.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Профиль пользователя - Avtorem.info</title>
+	<title>Профиль пользователя: сохраненное - Avtorem.info</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
