Профиль пользователя: информация о пользователе.

--- a/app/index.html
+++ b/app/index.html
@@ -552,7 +552,7 @@
                     <section id="content" class="white-section">
                         <!--<ul class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">-->
                             <!--<li class="home-page" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">-->
-                                <!--<a href="http://avtorem.info" itemprop="item"><span itemprop="name">Главная</span></a>-->
+                                <!--<a href="index.html" itemprop="item"><span itemprop="name">Главная</span></a>-->
                                 <!--<meta itemprop="position" content="1">-->
                             <!--</li>-->
                             <!--<li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">-->
@@ -1130,7 +1130,7 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <div class="position">1</div>
+                                <div class="rating-position">1</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1143,7 +1143,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">2</div>
+                                <div class="rating-position">2</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1156,7 +1156,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">3</div>
+                                <div class="rating-position">3</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1170,7 +1170,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">4</div>
+                                <div class="rating-position">4</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1184,7 +1184,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">5</div>
+                                <div class="rating-position">5</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
