--- a/app/page.html
+++ b/app/page.html
@@ -584,7 +584,7 @@
 
                         <div class="page-info">
                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-                                <a href="#" itemprop="url">
+                                <a href="profile.html" itemprop="url">
                                     <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">IvanIvanIvan</span>
                                 </a>
                             </div>
@@ -1118,7 +1118,7 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <div class="position">1</div>
+                                <div class="rating-position">1</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1131,7 +1131,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">2</div>
+                                <div class="rating-position">2</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1144,7 +1144,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">3</div>
+                                <div class="rating-position">3</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1158,7 +1158,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">4</div>
+                                <div class="rating-position">4</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1172,7 +1172,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">5</div>
+                                <div class="rating-position">5</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
