--- a/app/category.html
+++ b/app/category.html
@@ -1119,7 +1119,7 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <div class="position">1</div>
+                                <div class="rating-position">1</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1132,7 +1132,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">2</div>
+                                <div class="rating-position">2</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1145,7 +1145,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">3</div>
+                                <div class="rating-position">3</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1159,7 +1159,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">4</div>
+                                <div class="rating-position">4</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1173,7 +1173,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">5</div>
+                                <div class="rating-position">5</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
