--- a/app/questions.html
+++ b/app/questions.html
@@ -1048,7 +1048,7 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <div class="position">1</div>
+                                <div class="rating-position">1</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1061,7 +1061,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">2</div>
+                                <div class="rating-position">2</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1074,7 +1074,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">3</div>
+                                <div class="rating-position">3</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1088,7 +1088,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">4</div>
+                                <div class="rating-position">4</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
@@ -1102,7 +1102,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position">5</div>
+                                <div class="rating-position">5</div>
                                 <a href="profile.html" class="user-avatar">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
